--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,41 @@
-body {
-  background-color: slategrey;
-  color: white;
-  font-family: monospace;
-  font-size: 50px;
-  align-content: center;
+#gameBoard {
+    position:relative;
+    width:%;
+    height:90vh;
+    border:2px solid red;
+    margin:0 auto;
+    margin: 20px;
+}
+
+.box {
+    position:absolute;
+    top:140px; left:140px;
+    width:20px; height:20px;
+    background-color: dodgerblue;
+    transition: all 0.2s ease;
+}
+
+.boxgrow {
+    position:absolute;
+    width:25px; height:25px;
+    background-color: dodgerblue;
+    // transition: all 0.2s ease;
+}
+
+
+
+.ball {
+    position:absolute;
+
+    width:20px; height:20px;
+    // border-radius: 100px;
+    background-color: hotpink;
+    &.one {
+      top:150px;
+      left:150px;
+    }
+    &.two {
+      top:170px;
+      left:170px;
+    }
 }
