--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,13 +7,21 @@
     margin: 20px;
 }
 
-.box {
+.boxP1 {
     position:absolute;
-    top:140px; left:140px;
+    top:0px; left:620px;
     width:20px; height:20px;
     background-color: dodgerblue;
     transition: all 0.2s ease;
 }
+
+.boxP2 {
+        position:absolute;
+        top:0px; left:600px;
+        width:20px; height:20px;
+        background-color: orange;
+        transition: all 0.2s ease;
+    }
 
 .boxgrow {
     position:absolute;
