sliderfor time  works, styleing is bad

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,16 +6,30 @@ body{
   // overflow-x:auto;
 }
 
+main {
+    position: relative;
+}
+
 a{
   font-size: 30px;
   font-family: monospace;
 }
 
+#welcomePage{
+  display: inline;
+  position: absolute;
+  top: 10px;
+  left: 200px;
+  z-index: 50;
+}
+
 .gameScreen{
   margin: 40px auto;
+
 }
 
 #gameBoard {
+    z-index: 1;
   position:relative;
   width:90%;
   height:600px;
@@ -113,7 +127,7 @@ box-shadow: 0px 0px 10px 1px gold;
 }
 
 #hidden{
-  // visibility: hidden;
+  visibility: hidden;
 }
 
 #gameover{
