--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,8 +2,8 @@ body{
   width: 100%;
   text-align: center;
   background-color: F4FDFC;
-  // position: fixed;
-  // overflow-x:auto;
+  position: fixed;
+  overflow-x:auto;
 }
 
 main {
@@ -18,9 +18,9 @@ a{
 #welcomePage{
   display: inline;
   position: absolute;
-  top: 10px;
-  left: 200px;
-  z-index: 50;
+  top: 20vh;
+  left: 30%;
+  z-index: 4;
 }
 
 .gameScreen{
@@ -37,12 +37,15 @@ a{
   display: inline-block;
   margin: 0 20px;
 }
-
+.startButton{
+  margin: 20px auto;
+}
 .Scoreboard  {
   width: 90%;
   display: flex;
   margin: 0 auto;
   overflow: hidden;
+  justify-content: space-between;
 }
 .p1score{
   display: block;
@@ -115,14 +118,17 @@ a{
 box-shadow: 0px 0px 10px 1px gold;
 }
 
-
+// .scoreContent{
+//   align-content: center;
+// }
 
 #countDownTimer{
   margin-top: 50px;
   height: 40px;
   font-size: 40px;
   font-family: monospace;
-  width: 100%;
+  width: 60%;
+
 
 }
 
@@ -161,7 +167,7 @@ box-shadow: 0px 0px 10px 1px gold;
 #mute-button{
   margin-top: 50px;
   margin-left: 50px;
-  height: 40px;
+  height: 47px;
   width: 47px;
   border-radius: 100px;
   border: solid 2px lightgrey;
@@ -180,4 +186,156 @@ border: solid 2px slategrey;
 
 .clicked{
   background-color: red;
+}
+
+
+
+// slider style
+
+input {
+  -webkit-appearance: none;
+  width: 80%;
+  height: 20px;
+  background: linear-gradient(to right, #16a085 0%, #16a085 100%);
+  background-size: 300px 5px;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  outline: none;
+  zoom: 130%;
+  display: block;
+  margin: 30px auto;
+}
+
+input::-webkit-slider-thumb {
+ -webkit-appearance: none;
+ width: 20px;
+ height: 20px;
+ background: #27ae60;
+ position: relative;
+ z-index: 3;
+}
+
+input::-webkit-slider-thumb:after {
+ content: " ";
+ width: 160px;
+ height: 10px;
+ position: absolute;
+ z-index: 1;
+ right: 20px;
+ top: 5px;
+ background: #2ecc71;
+}
+
+
+//random slider styles
+
+// Base Colors
+$shade-10: #2c3e50 !default;
+$shade-1: #d7dcdf !default;
+$shade-0: #fff !default;
+$teal: #1abc9c !default;
+
+
+// Reset
+* {
+  &,
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
+}
+
+
+
+// Range Slider
+$range-width: 100% !default;
+
+$range-handle-color: $shade-10 !default;
+$range-handle-color-hover: $teal !default;
+$range-handle-size: 20px !default;
+
+$range-track-color: $shade-1 !default;
+$range-track-height: 10px !default;
+
+$range-label-color: $shade-10 !default;
+$range-label-width: 60px !default;
+
+.value {
+  display: inline-block;
+  margin: 30px auto;
+}
+
+
+.range-slider__range {
+  -webkit-appearance: none;
+  width: 400px;
+  height: $range-track-height;
+  border-radius: 5px;
+  background: $range-track-color;
+  outline: none;
+  padding: 0;
+  margin: 0;
+
+  // Range Handle
+  &::-webkit-slider-thumb {
+    appearance: none;
+    width: $range-handle-size;
+    height: $range-handle-size;
+    border-radius: 50%;
+    background: $range-handle-color;
+    cursor: pointer;
+    transition: background .15s ease-in-out;
+
+    &:hover {
+      background: $range-handle-color-hover;
+    }
+  }
+
+  &:active::-webkit-slider-thumb {
+    background: $range-handle-color-hover;
+  }
+
+  &::-moz-range-thumb {
+    width: $range-handle-size;
+    height: $range-handle-size;
+    border: 0;
+    border-radius: 50%;
+    background: $range-handle-color;
+    cursor: pointer;
+    transition: background .15s ease-in-out;
+
+    &:hover {
+      background: $range-handle-color-hover;
+    }
+  }
+
+  &:active::-moz-range-thumb {
+    background: $range-handle-color-hover;
+  }
+}
+
+
+// Range Label
+.range-slider__value {
+  display: inline-block;
+  position: relative;
+  width: 400px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 3px;
+  padding: 5px 10px;
+  margin: 10px auto;
+}
+
+
+// Firefox Overrides
+::-moz-range-track {
+    background: $range-track-color;
+    border: 0;
+}
+
+input::-moz-focus-inner,
+input::-moz-focus-outer {
+  border: 0;
 }
