game MVP working fully

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,39 +26,39 @@
 }
 
 blue{
+  font-size: 20px;
   color: dodgerblue;
   padding: 30px;
 }
 
 green{
+  font-size: 20px;
   color: green;
   padding: 30px;
 }
 
 gold{
+  font-size: 20px;
   color: gold;
   padding: 30px;
 }
 
 red{
+  font-size: 20px;
   color: red;
   padding: 30px;
 }
 #popupBackground{
+  z-index: 40;
   position: absolute;
-  height: vh;
-  background-color: rgba(0,0,0,.8);
+  height: 70vh;
+  background-color: black;
   top: 104px;
-  left: 252px;
-width: 60%;
+  left: 359px;
+  width: 55%;
   padding: 50px;
 }
 
-.gameboarPosition{
-  margin-top: 400px;
-  height: 500px;
-  background-color: red;
-}
 #instructionsp1color{
   color: hotpink;
   font-size: 20px;
@@ -75,11 +75,11 @@ width: 60%;
 }
 
 .dotInstructions{
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
 .title{
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
 body{
   font-family: 'Roboto', sans-serif;
@@ -94,13 +94,38 @@ body{
 }
 .instructions{
   position: relative;
-  top: -820px;
+  top: -7px;
   float: right;
-  font-size: 40px;
+
   color: #000;
   width: 100%;
 }
 
+.icon1:hover{
+  color: gold;
+}
+
+.icon1{
+  font-size: 40px;
+  float: right;
+  margin: 20px 20px;
+  cursor: cell;
+}
+
+#mute-button{
+  float: left;
+  margin: 20px 20px;
+  cursor: cell;
+  font-size: 30px;
+  outline: 0;
+  border: none;
+  background: none;
+}
+
+#mute-button:hover{
+  color: gold;
+
+}
 .arrowKeys {
   background: url('../images/arrowkeys.png');
   height: 77px;
@@ -121,19 +146,6 @@ body{
   display: none;
 }
 
-.icon1:hover{
-  color: gold;
-}
-
-.icon1{
-  float: right;
-  margin: 20px 20px;
-  cursor: cell;
-}
-.icon2{
-  float: left;
-  margin: 20px 20px;
-}
 .header{
   margin: 40px auto;
   max-width: 600px;
@@ -171,7 +183,7 @@ a{
 
 
 .gameScreen{
-  margin: 40px auto;
+  margin: 0 auto;
 
 }
 
@@ -180,7 +192,7 @@ a{
   position:relative;
   width:90%;
   height:600px;
-  border:1px solid lightgrey;
+  border: 5px solid black;
   display: inline-block;
   margin: 0 20px;
 }
@@ -188,7 +200,18 @@ a{
   margin: 30px auto;
 }
 
-button{
+a {
+  text-decoration: none;
+  style: none;
+}
+
+a:visited{
+  text-decoration: none;
+  style: none;
+  color: black;
+}
+
+#finish{
   margin: 0 auto;
   background-color: white;
   font-family: 'Roboto', sans-serif;
@@ -197,6 +220,9 @@ button{
   padding: 10px 30px;
   border: none;
   cursor: cell;
+}
+
+button{
 }
 
 /* Underline From Center */
@@ -208,6 +234,15 @@ button{
   box-shadow: 0 0 1px transparent;
   position: relative;
   overflow: hidden;
+  border: none;
+  outline: none;
+  background-color: #fff;
+  font-family: Roboto,sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  padding: 10px 30px;
+  border: none;
+  cursor: cell
 }
 .hvr-underline-from-center:before {
   content: "";
@@ -247,6 +282,7 @@ button{
 }
 
 #p1Counter{
+  color: hotpink;
   display: table;
   font-size: 90px;
   margin: 20px;
@@ -254,6 +290,7 @@ button{
 }
 
 #p2Counter{
+  color: orange;
   display: table;
   font-size: 90px;
   margin: 20px;
@@ -262,7 +299,7 @@ button{
 
 .boxP1 {
   position:absolute;
-  top:578px; left:49%;
+  top:570px; left:49%;
   width:20px; height:20px;
   background-color: hotpink;
   transition: all 0.2s ease;
@@ -270,7 +307,7 @@ button{
 
 .boxP2 {
   position:absolute;
-  top:578px; left:51%;
+  top:570px; left:51%;
   width:20px; height:20px;
   background-color: orange;
   transition: all 0.2s ease;
@@ -332,47 +369,24 @@ button{
 
 #gameOverDiv{
   height: 500px;
-  background-color: red;
-  font-family: monospace;
+  color: black;
   &.noshow{
     display: none;
   }
 }
 
 .gameoverTitle{
-  color: white;
   font-size: 50px;
-  margin: 50px auto;
-  font-family: monospace;
+  padding-top: 200px;
 }
 
 .showWinner{
-  color: white;
-  font-size: 50px;
+  font-size: 100px;
+  text-transform: uppercase;
   margin: 50px auto;
-  font-family: monospace;
 }
 
 
-#mute-button{
-  margin-top: 50px;
-  margin-left: 50px;
-  height: 47px;
-  width: 47px;
-  border-radius: 100px;
-  border: solid 2px lightgrey;
-  font-size: 20px;
-  background-color: white;
-  color: lightgrey;
-  outline: none;
-}
-
-#mute-button:hover{
-  background-color: slategrey;
-  color: white;
-  border: solid 2px slategrey;
-
-}
 
 
 
