--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -220,6 +220,7 @@ a:visited{
   padding: 10px 30px;
   border: none;
   cursor: cell;
+  color: black;
 }
 
 button{
@@ -287,6 +288,7 @@ button{
   font-size: 90px;
   margin: 20px;
   font-family: monospace;
+
 }
 
 #p2Counter{
@@ -297,12 +299,35 @@ button{
   font-family: monospace;
 }
 
+@keyframes bounce {
+  from, 20%, 53%, 80%, to {
+    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    transform: translate3d(0,0,0);
+  }
+
+  40%, 43% {
+    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -30px, 0);
+  }
+
+  70% {
+    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transform: translate3d(0, -15px, 0);
+  }
+
+  90% {
+    transform: translate3d(0,-4px,0);
+  }
+}
+
 .boxP1 {
   position:absolute;
   top:570px; left:49%;
   width:20px; height:20px;
   background-color: hotpink;
   transition: all 0.2s ease;
+  -webkit-animation: bounce 1s ease-out;
+    -webkit-animation-iteration-count: 3;
 }
 
 .boxP2 {
@@ -311,6 +336,9 @@ button{
   width:20px; height:20px;
   background-color: orange;
   transition: all 0.2s ease;
+  -webkit-animation: bounce 1s ease-out;
+    -webkit-animation-iteration-count: 3;
+
 }
 
 .ball {
@@ -384,9 +412,23 @@ button{
   font-size: 100px;
   text-transform: uppercase;
   margin: 50px auto;
+  -webkit-animation: pulse 1s ease-out;
+    -webkit-animation-iteration-count: 3;
 }
 
+@keyframes pulse {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
 
+  50% {
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
 
 
 
@@ -563,6 +605,16 @@ black;
 .spinner {
   position: absolute;
   top: -5%;
+  left: 50%;
+  z-index: 1;
+  height: 30px;
+  width: 30px;
+  transform: translate(-50%, -50%);
+}
+
+.spinner2 {
+  position: absolute;
+  top: 63%;
   left: 50%;
   z-index: 1;
   height: 30px;
