--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -617,3 +617,23 @@ $colors: black,black,black,gold,black,black,black,black;
     animation-timing-function: cubic-bezier(0.5, 0.3 * $i, 0.9, 0.9);
   }
 }
+
+
+footer {
+  font-size: 14px;
+  font-weight: 500;
+  height: 30px;
+  background-color: black;
+  color: white;
+  position: relative;
+  top: 63px;
+  padding: 10px;
+
+  & a {
+    text-decoration: none;
+  }
+  & a:visited {
+    color: white;
+    text-decoration: none;
+  }
+}
