footer now works

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -625,8 +625,9 @@ footer {
   height: 30px;
   background-color: black;
   color: white;
-  position: relative;
-  top: 63px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   padding: 10px;
 
   & a {
